--- a/resources/assets/sass/topbar/topbar.scss
+++ b/resources/assets/sass/topbar/topbar.scss
@@ -9,10 +9,19 @@
   width: 100%;
 }
 
+.topbar-background {
+  background-image: url('../img/bg7.jpg');
+  background-size: cover;
+  height: 100vh;
+  width: 100%;
+  min-height: 640px;
+  max-height: 900px;
+  position: absolute;
+  z-index: -1;
+}
+
 .topbar-navigation, .topbar-menu {
   display: flex;
-  background-color: rgba(0,0,0,0.4);
-  // flex-grow: 1;
 }
 
 .topbar-link {
